tests/snapshots/run_wpt_conformance__litert_averagePool2d_float32_4D_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js averagePool2d float32 4D tensor all positive default options, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f32[1, 2, 5, 5];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="", outputShapeRounding="", outputSizes=null, padding=[], strides=[], windowDimensions=null);
  }

  outputs { averagePool2dOutput; }
}
