tests/snapshots/run_wpt_conformance__litert_averagePool2d_float32_4D_tensor_options_layout_nhwc_and_options_outputShapeRounding_ceil.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js averagePool2d float32 4D tensor options.layout=nhwc and options.outputShapeRounding=ceil, litert
 average_pool2d :: averagePool2d float32 4D tensor options.layout=nhwc and options.outputShapeRounding=ceil: index 0: actual=36.135025 expected=54.20253 ulp=4736288 tolerance=11
  inputs: averagePool2dInput: [22.975555419921875, 91.59549713134766, 78.15438079833984, 65.64701080322266, 9.686111450195313, 55.14215087890625, 51.298038482666016, 18.432437896728516, 32.193084716796875, 49.34624099731445, 87.65037536621094, 15.648024559020996, 87.25082397460938, 68.02723693847656, 39.49794006347656, 20.342548370361328, 80.0996322631836, 26.727949142456055, 10.220142364501951, 64.87446594238281, 52.60269927978515, 46.5671501159668, 1.4128639698028564, 79.57833099365234 ...] (len=50)
  expected averagePool2dOutput: [54.20253, 52.733746, 37.165825, 39.1443, 21.206614, 57.11035, 50.038944, 43.231255, 58.460464, 32.67961 ...] (len=18)
  actual averagePool2dOutput: [36.135025, 35.15583, 24.777216, 26.096199, 50.038948, 43.231255, 58.460464, 32.67961, 0, 0 ...] (len=18)
  expected averagePool2dOutput full nd:
[54.20253, 52.733746, 37.165825, 39.1443, 21.206614, 57.11035, 50.038944, 43.231255, 58.460464, 32.67961, ...] (len=18, shape=[1, 3, 3, 2])
  actual averagePool2dOutput full nd:
[36.135025, 35.15583, 24.777216, 26.096199, 50.038948, 43.231255, 58.460464, 32.67961, 0, 0, ...] (len=18, shape=[1, 3, 3, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f32[1, 5, 5, 2];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="nhwc", outputShapeRounding="ceil", outputSizes=null, padding=[1, 0, 0, 1], strides=[2, 2], windowDimensions=[3, 3]);
  }

  outputs { averagePool2dOutput; }
}
