tests/snapshots/run_wpt_conformance__litert_averagePool2d_float32_4D_tensor_options_outputShapeRounding_ceil.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js averagePool2d float32 4D tensor options.outputShapeRounding=ceil, litert
 average_pool2d :: averagePool2d float32 4D tensor options.outputShapeRounding=ceil: index 0: actual=36.135025 expected=54.20253 ulp=4736288 tolerance=11
  inputs: averagePool2dInput: [22.975555419921875, 78.15438079833984, 9.686111450195313, 51.298038482666016, 32.193084716796875, 87.65037536621094, 87.25082397460938, 39.49794006347656, 80.0996322631836, 10.220142364501951, 52.60269927978515, 1.4128639698028564, 11.95406436920166, 85.00074768066406, 64.78374481201172, 88.03128814697266, 11.333850860595703, 70.61659240722656, 84.90442657470703, 79.06687927246094, 7.3287248611450195, 35.97796630859375, 10.177306175231934, 1.41407573223114 ...] (len=50)
  expected averagePool2dOutput: [54.20253, 37.165825, 21.206614, 50.038944, 58.460464, 51.356922, 37.24429, 54.04661, 78.58363, 52.733746 ...] (len=18)
  actual averagePool2dOutput: [36.135025, 24.777216, 50.038948, 58.460464, 64.783745, 88.03129, 11.333851, 70.61659, 84.90443, 35.15583 ...] (len=18)
  expected averagePool2dOutput full nd:
[54.20253, 37.165825, 21.206614, 50.038944, 58.460464, 51.356922, 37.24429, 54.04661, 78.58363, 52.733746, ...] (len=18, shape=[1, 2, 3, 3])
  actual averagePool2dOutput full nd:
[36.135025, 24.777216, 50.038948, 58.460464, 64.783745, 88.03129, 11.333851, 70.61659, 84.90443, 35.15583, ...] (len=18, shape=[1, 2, 3, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f32[1, 2, 5, 5];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="", outputShapeRounding="ceil", outputSizes=null, padding=[1, 0, 0, 1], strides=[2, 2], windowDimensions=[3, 3]);
  }

  outputs { averagePool2dOutput; }
}
